# grsql

./: .env  .gitignore  Cargo.toml  README.md  build.rs  input.txt
migrations/2022-06-29-092034_grsql/: up.sql
proto/: data.proto
src/: client.rs  entity.rs  schema.rs  server.rs
