[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.8", features = ["sqlite"] }
dotenv = "0.15.0"
futures-util = "0.3.21"
prost = "0.10.4"
serde = { version = "1.0.137", features = ["derive"] }
streamer = { version = "0.1.1", features = ["hyper"] }
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
tonic = "0.7.2"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[build-dependencies]
tonic-build = "0.7"
